Revisão service concluída