@@ -5,7 +5,6 @@ import com.lattes.backend.domain.repository.ArtigoOpenAlexRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ArtigoService {
@@ -16,6 +15,9 @@ public class ArtigoService {
         this.repository = repository;
     }
 
+    // Recebemos a lista de objetos do banco de dados, transformamos cada um em um DTO e retornamos a lista de DTOs
+    // Foi uma escolha deliberada continuar com lista de objetos ao invés de trazer uma lista de DTOs direto do banco,
+    // Pois a lógica de negócio/transformação fica no service.
     public List<PublicacaoPorTipoDTO> getDistribuicaoPorTipo() {
         List<Object[]> resultadosBanco = repository.contarPublicacoesPorTipo();
 
@@ -25,6 +27,13 @@ public class ArtigoService {
                     Long quantidade = ((Number) linha[1]).longValue();
                     return PublicacaoPorTipoDTO.builder().tipo(tipo).quantidade(quantidade).build();
                 })
-                .collect(Collectors.toList());
+                .toList(); // Coleta os DTOs em uma lista e retorna
     }
+
+    // Caso trouxéssemos uma lista de DTOs direto do banco, o código seria algo como:
+    /**
+    public List<PublicacaoPorTipoDTO> getDistribuicaoPorTipo() {
+        return repository.contarPublicacoesPorTipo();
+    }
+     */
 }
